--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,30 @@
   font-family: 'Roboto', sans-serif;
 }
 .container{
-  width: 700px;
+  width: 1000px;
   margin: 0 auto;
+  /* regole di debug */
+border: 1px solid white;
+min-height: 100px;
+  /* fine debug */
 }
+/* regole di debug */
+  header{
+    background-color: red;
+    min-height: 100px;
+  }
+/* fine debug */
+
+/* regole di debug */
+main{
+  background-color: rgb(0, 26, 255);
+  min-height: 100px;
+}
+/* fine debug */
+
+/* regole di debug */
+footer{
+  background-color: rgb(255, 217, 0);
+  min-height: 100px;
+}
+/* fine debug */
