--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,12 @@ min-height: 100px;
   display: flex;
   flex-wrap: wrap;
 }
+.absolute{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 /* list */
 ul{
   list-style: none;
@@ -27,11 +33,18 @@ a{
   text-decoration: none;
   color: black;
 }
+/* fonts */
+.font-big{
+  font-size: 30px;
+}
+.font-small{
+  font-size: 11px;
+}
+
 
 /******* INIZIO REGOLE HEADER *******/
 header{
   background-color: white;
-  margin-bottom: 100px;
   position: fixed;
   z-index: 100;
   top: 0;
@@ -60,19 +73,18 @@ header{
   header .icon{
     margin: 7px 0;
   }
-  .active{
+  header .active{
     background-color: orange;
   }
-  .active a{
+  header .active a{
     color: white;
   }
 /******* FINE HEADER *******/
 
 /******* INIZIO REGOLE MAIN *******/
 /* regole di debug */
-main section{
-  min-height: 100px;
-  background-color: lightgray;
+main{
+  margin-top: 100px;
 }
 /* fine debug */
 
@@ -80,17 +92,60 @@ main section{
 .carosel{
   height: 500px;
   text-align: center;
-  border: 3px solid;
+}
+.carosel.b,
+.carosel.c {
+  color: white;
+  width: 100%;
+  align-items: center;
+  background-repeat: no-repeat;
+}
+.carosel.b .circle,
+.carosel.c .circle{
+  display: inline-block;
+  width: 40px; height: 40px;
+  border: 1px solid;
+  border-radius: 50%;
+  padding: 50px;
+  position: relative;
+}
+.carosel.a .squere,
+.carosel.b .squere,
+.carosel.c .squere {
+  display: inline-block;
+  width: 20px; height: 10px;
+  border: 1px solid;
+}
+
+/* carosel a */
+.carosel.a{
+  background-image: url(../images/slider_slide3_background.png);
 }
 
 /**** barra a e b ****/
 .barra{
-  background-color: purple;
+  background-image: url(../images/pattern.png);
+}
+.barra,
+.barra a{
+  color: white;
+}
+.barra a{
+  font-size: 18px;
+  border: 1px solid;
+  padding: 10px;
+}
+.barra a span{
+  margin-right: 3px;
+}
+.barra a:hover{
+  background-color: white;
+  color: blueviolet;
 }
 .barra .container{
   justify-content: space-between;
   align-items: center;
-  min-height: 50px;
+  height: 50px;
 }
 .circle .box{
   width: 25%;
@@ -100,6 +155,7 @@ main section{
   min-height: 100px;
   /* fine debug */
 }
+
 /**** info a e b ****/
 .info-a .box,
 .info-b .box {
@@ -110,6 +166,20 @@ main section{
   min-height: 200px;
   /* fine debug */
 }
+
+/* carosel b */
+.carosel.b{
+  background-image: url(../images/parallax_01.jpg);
+}
+.carosel.b .flex{
+  justify-content: center;
+}
+.carosel.b .box{
+  width: 200px;
+  padding: 20px;
+}
+
+/**** class e staff ****/
 .our-class .text-right,
 .our-class .text-left,
 .staff .text-right,
@@ -125,6 +195,21 @@ main section{
   /* regole di debug */
   border: 1px solid;
   /* fine debug */
+}
+
+/* carosel c */
+.carosel.c{
+  background-image: url(../images/parallax_02.jpg);
+}
+.carosel.c .circle{
+  padding: 30px;
+}
+.carosel.c .line{
+  display: inline-block;
+  margin-bottom: 5px;
+}
+.carosel.c .cit{
+  margin: 10px 0;
 }
 
 /**** section child images ****/
@@ -180,7 +265,7 @@ footer .title{
   margin-bottom: 20px;
   color: white;
 }
-footer .line{
+.line{
   width: 40px; height: 1px;
   background-color: lightgray;
   margin-top: 5px;
@@ -249,7 +334,6 @@ footer .bottom{
   margin: 10px 0;
 }
 .copyright{
-  font-size: 11px;
   color: gray;
 }
 
