--- a/css/main.css
+++ b/css/main.css
@@ -35,10 +35,16 @@ a{
 }
 /* fonts */
 .font-big{
+  font-size: 50px;
+}
+.font-medium{
   font-size: 30px;
 }
 .font-small{
   font-size: 11px;
+}
+.gray{
+  color: gray;
 }
 
 
@@ -87,7 +93,24 @@ main{
   margin-top: 100px;
 }
 /* fine debug */
-
+section.welcome,
+section.our-class,
+section.staff,
+section.news,
+section.contact{
+  padding: 80px 0;
+}
+main .title-box{
+  margin-bottom: 50px;
+  text-align: center;
+}
+main .title{
+  color: blueviolet;
+}
+.title-box .gray{
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 /**** carosel a - b e c ****/
 .carosel{
   height: 500px;
@@ -100,13 +123,12 @@ main{
   align-items: center;
   background-repeat: no-repeat;
 }
-.carosel.b .circle,
-.carosel.c .circle{
+main .circle{
   display: inline-block;
   width: 40px; height: 40px;
   border: 1px solid;
   border-radius: 50%;
-  padding: 50px;
+  padding: 80px;
   position: relative;
 }
 .carosel.a .squere,
@@ -147,13 +169,26 @@ main{
   align-items: center;
   height: 50px;
 }
-.circle .box{
-  width: 25%;
-  /* regole di debug */
-  background-color: lightgreen;
-  border: 1px solid #ffffff;
-  min-height: 100px;
-  /* fine debug */
+
+
+/* welcome */
+.welcome{
+  text-align: center;
+}
+.welcome .circle{
+  border: 0;
+}
+.welcome .orange-background{
+  background-color: orangered;
+}
+.welcome .orange-color{
+  color: orangered;
+}
+.welcome .violet-background{
+  background-color: blueviolet;
+}
+.welcome .violet-color{
+  color: blueviolet;
 }
 
 /**** info a e b ****/
@@ -171,13 +206,48 @@ main{
 .carosel.b{
   background-image: url(../images/parallax_01.jpg);
 }
+.welcome .flex,
 .carosel.b .flex{
-  justify-content: center;
+  justify-content: space-around;
 }
+.welcome .box,
 .carosel.b .box{
   width: 200px;
-  padding: 20px;
 }
+
+/* our-class */
+.our-class .image.flex{
+  width: 100%;
+}
+.staff .image .box,
+.our-class .image .box{
+  display: flex;
+  justify-content: space-between;
+  width: calc(50% - 15px); /*-15px*/
+  min-height: 100px;
+  border: 1px solid;
+  margin-top: 30px;
+}
+.staff .image .box.sx,
+.our-class .image .box.sx{
+  margin-right: 15px; /* +15 */
+}
+.staff .image .box.dx,
+.our-class .image .box.dx{
+  margin-left: 15px; /* +15 */
+}
+.staff .image img,
+.our-class .image img{
+  width: 50%;
+}
+.our-class .image div{
+  background-color: blueviolet;
+}
+.staff .image div,
+.our-class .image div{
+  width: 50%;
+}
+
 
 /**** class e staff ****/
 .our-class .text-right,
@@ -255,7 +325,7 @@ footer{
 footer .top{
   background-image: url(../images/pattern.png);
   background-repeat: no-repeat;
-  color: lightgray
+  color: lightgray;
 }
 footer .box{
   width: 25%;
@@ -332,9 +402,6 @@ footer .bottom{
   border: 1px solid orange;
   background-color: orange;
   margin: 10px 0;
-}
-.copyright{
-  color: gray;
 }
 
 /******* FINE FOOTER *******/
